do (get your score) & (ladder), wip (getParams)

--- a/ladder.ipynb
+++ b/ladder.ipynb
@@ -9,14 +9,13 @@
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "\n",
-    "api_key = \"RGAPI-08720709-f17f-40ca-abe5-7b320b90eb06\"\n",
+    "from secret import API_KEY\n",
     "\n",
     "def dfFromAboveDiamond():\n",
     "    queues = ['challenger', 'grandmaster', 'master']\n",
     "    list = []\n",
     "    for i in queues:\n",
-    "        response = requests.get(f\"https://euw1.api.riotgames.com/lol/league/v4/{i}leagues/by-queue/RANKED_SOLO_5x5?api_key={api_key}\")\n",
+    "        response = requests.get(f\"https://euw1.api.riotgames.com/lol/league/v4/{i}leagues/by-queue/RANKED_SOLO_5x5?api_key={API_KEY}\")\n",
     "        json = response.json()['entries']\n",
     "        df = pd.DataFrame.from_dict(json)\n",
     "        df.insert(4, 'tier', i)\n",
@@ -27,7 +26,7 @@
     "def dfFromDiamond1(nbr):\n",
     "    list = []\n",
     "    for i in range(1, nbr):\n",
-    "        response = requests.get(f\"https://euw1.api.riotgames.com/lol/league/v4/entries/RANKED_SOLO_5x5/DIAMOND/I?page={i}&api_key={api_key}\")\n",
+    "        response = requests.get(f\"https://euw1.api.riotgames.com/lol/league/v4/entries/RANKED_SOLO_5x5/DIAMOND/I?page={i}&api_key={API_KEY}\")\n",
     "        json = response.json()\n",
     "        df = pd.DataFrame.from_dict(json)\n",
     "        list.append(df)\n",
@@ -86,6 +85,16 @@
    "source": [
     "df['totalgames'] = df.apply(lambda x: x['wins'] + x['losses'], axis=1)\n",
     "df['winrate'] = df.apply(lambda x: round(x['wins'] / x['totalgames'] * 100, 1), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6131aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   }
  ],
