--- a/getYourScore.ipynb
+++ b/getYourScore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "27861cfb",
    "metadata": {},
    "outputs": [],
@@ -10,89 +10,97 @@
     "import requests\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from secret import API_KEY"
+    "from secret import API_KEY\n",
+    "from data import DATA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5cdd09d3",
+   "execution_count": 14,
+   "id": "bfd4390d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbrGames = 20\n",
-    "ig = 'Vayntox'"
+    "def pieWinrate(df):\n",
+    "    plt.figure()\n",
+    "    plt.title(\"Winrate\")\n",
+    "    percent = df['winrate'].mean()*100\n",
+    "    labels = ['win', 'lose']\n",
+    "    plt.pie([percent, 100-percent], labels=labels, autopct='%1.0f%%')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1b1eb5c2",
+   "execution_count": 15,
+   "id": "d86c90a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "puuid = requests.get(f\"https://euw1.api.riotgames.com/lol/summoner/v4/summoners/by-name/{ig}?api_key={API_KEY}\").json()[\"puuid\"]"
+    "def formatScore(nbr):\n",
+    "    level = \"\"\n",
+    "    if nbr < 0.2:\n",
+    "        level = \"C'est pas vraiment pas ouf..\"\n",
+    "    elif nbr < 0.4:\n",
+    "        level = \"Ça vaaaaaaa\"\n",
+    "    elif nbr < 0.6:\n",
+    "        level = \"Il s'en sort bien !\"\n",
+    "    elif nbr < 0.8:\n",
+    "        level = \"Trop fort\"\n",
+    "    else:\n",
+    "        level = \"Il est juste gifted en faite\"\n",
+    "    return f\"T'es a {nbr:.0%} de performance. {level}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0d95016f",
+   "execution_count": 16,
+   "id": "de815b93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "games = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids?type=ranked&start=0&count={nbrGames}&api_key={API_KEY}\").json()"
+    "def getPuuid(ig):\n",
+    "    return requests.get(f\"https://euw1.api.riotgames.com/lol/summoner/v4/summoners/by-name/{ig}?api_key={API_KEY}\").json()[\"puuid\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "83c823d9",
+   "execution_count": 17,
+   "id": "4fb57436",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = ['championName', 'win', 'gameDuration', 'teamPosition', 'totalMinionsKilled', 'neutralMinionsKilled', 'totalDamageDealtToChampions', 'goldEarned', 'totalDamageTaken', 'visionScore', 'timeCCingOthers']"
+    "def getRecentGames(puuid):\n",
+    "    nb = 20\n",
+    "    return requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/by-puuid/{puuid}/ids?type=ranked&start=0&count={nb}&api_key={API_KEY}\").json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "054f5a54",
+   "execution_count": 18,
+   "id": "8d3e64af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = []"
+    "def getDFfromJson(puuid, games, champ):\n",
+    "    array = []\n",
+    "    for i in games:\n",
+    "        json = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/{i}?api_key={API_KEY}\").json()\n",
+    "        index = json['metadata']['participants'].index(puuid)\n",
+    "        player = json['info']['participants'][index]\n",
+    "        if player['championName'] != champ: continue\n",
+    "        if player['teamPosition'] != DATA[champ][\"role\"]: continue\n",
+    "        player['gameDuration'] = json['info']['gameDuration']\n",
+    "        array.append(pd.DataFrame({x: [player[x]] for x in DATA[champ][\"columns\"]}))\n",
+    "            \n",
+    "    return pd.concat(array).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0b0616c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in games:\n",
-    "    json = requests.get(f\"https://europe.api.riotgames.com/lol/match/v5/matches/{i}?api_key={API_KEY}\").json()\n",
-    "    index = json['metadata']['participants'].index(puuid)\n",
-    "    player = json['info']['participants'][index]\n",
-    "    player['gameDuration'] = json['info']['gameDuration']\n",
-    "    array.append(list(map(lambda x: player[x], columns)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "80327607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(data=array, columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ccd406ea",
+   "execution_count": 19,
+   "id": "9658d1f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,28 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "300ff9fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formatedDf = formatDf(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a5af00d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def filterGames(df, champ):\n",
-    "    return df[df['championName'] == champ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "1cc428dc",
    "metadata": {},
    "outputs": [],
@@ -147,102 +134,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "26f8ca1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def score(params, data):\n",
+    "def calcScore(params, df):\n",
     "    s = 0\n",
     "    for k, v in params.items():\n",
-    "        n = (data[k] / (data['gameDuration'] / 60)).mean()\n",
+    "        n = (df[k] / (df['gameDuration'] / 60)).mean()\n",
     "        s += v[0]*((n-v[1])/(v[2]-v[1]))\n",
     "    return float(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d86c90a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def formatScore(nbr):\n",
-    "    level = \"\"\n",
-    "    if nbr < 0.2:\n",
-    "        level = \"C'est pas vraiment pas ouf..\"\n",
-    "    elif nbr < 0.4:\n",
-    "        level = \"Ça vaaaaaaa\"\n",
-    "    elif nbr < 0.6:\n",
-    "        level = \"Tu t'en sors bien !\"\n",
-    "    elif nbr < 0.8:\n",
-    "        level = \"Mec, t'es trop fort\"\n",
-    "    else:\n",
-    "        level = \"T'es gifted\"\n",
-    "    return f\"T'es a {nbr:.1%} de performance. {level}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "0d26c666",
    "metadata": {},
    "outputs": [],
    "source": [
     "def getScore(df, champ):\n",
-    "    df = formatDf(df)\n",
-    "    data = filterGames(df, champ)\n",
     "    params = getParams(champ)\n",
-    "    s = score(params, data)\n",
+    "    s = calcScore(params, df)\n",
     "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8279e3af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = getScore(formatedDf, 'Vayne')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "8e98f399",
+   "execution_count": 23,
+   "id": "17594747",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"T'es a 47.4% de performance. Tu t'en sors bien !\""
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T'es a 43.0% de performance. Tu t'en sors bien !\n"
+     ]
     }
    ],
    "source": [
-    "formatScore(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "bfd4390d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pieWinrate(df):\n",
-    "    plt.figure()\n",
-    "    plt.title(\"Winrate\")\n",
-    "    percent = df['win'].mean()*100\n",
-    "    labels = ['win', 'lose']\n",
-    "    plt.pie([percent, 100-percent], labels=labels, autopct='%1.0f%%')\n",
-    "    plt.legend()\n",
-    "    plt.show()"
+    "ig = \"Vayntox\"\n",
+    "champ = \"Vayne\"\n",
+    "puuid = getPuuid(ig)\n",
+    "games = getRecentGames(puuid)\n",
+    "df = getDFfromJson(puuid, games, champ)\n",
+    "df = formatDf(df)\n",
+    "params = getParams(champ)\n",
+    "score = getScore(df, champ)\n",
+    "print(formatScore(score))"
    ]
   }
  ],
