--- a/calcParams.ipynb
+++ b/calcParams.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import fileinput, sys"
    ]
   },
   {
@@ -31,146 +33,77 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>win</th>\n",
-       "      <th>gameDuration</th>\n",
-       "      <th>kills</th>\n",
-       "      <th>deaths</th>\n",
-       "      <th>totalDamageDealtToChampions</th>\n",
-       "      <th>totalMinionsKilled</th>\n",
-       "      <th>neutralMinionsKilled</th>\n",
-       "      <th>gameEndedInEarlySurrender</th>\n",
-       "      <th>gameEndedInSurrender</th>\n",
-       "      <th>hadAfkTeammate</th>\n",
-       "      <th>scoreCreeps</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>1961</td>\n",
-       "      <td>14</td>\n",
-       "      <td>4</td>\n",
-       "      <td>46039</td>\n",
-       "      <td>232</td>\n",
-       "      <td>42</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>1061</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3388</td>\n",
-       "      <td>104</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>1462</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>12658</td>\n",
-       "      <td>165</td>\n",
-       "      <td>12</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6526</td>\n",
-       "      <td>136</td>\n",
-       "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>2332</td>\n",
-       "      <td>18</td>\n",
-       "      <td>6</td>\n",
-       "      <td>47700</td>\n",
-       "      <td>348</td>\n",
-       "      <td>43</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>391</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     win  gameDuration  kills  deaths  totalDamageDealtToChampions  \\\n",
-       "0   True          1961     14       4                        46039   \n",
-       "1  False          1061      0       5                         3388   \n",
-       "2  False          1462      2       7                        12658   \n",
-       "3   True          1148      1       1                         6526   \n",
-       "4   True          2332     18       6                        47700   \n",
-       "\n",
-       "   totalMinionsKilled  neutralMinionsKilled  gameEndedInEarlySurrender  \\\n",
-       "0                 232                    42                      False   \n",
-       "1                 104                     1                      False   \n",
-       "2                 165                    12                      False   \n",
-       "3                 136                     2                      False   \n",
-       "4                 348                    43                      False   \n",
-       "\n",
-       "   gameEndedInSurrender  hadAfkTeammate  scoreCreeps  \n",
-       "0                 False               0          274  \n",
-       "1                 False               0          105  \n",
-       "2                 False               0          177  \n",
-       "3                  True               0          138  \n",
-       "4                 False               0          391  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "data = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dropOutliers(df):\n",
+    "    df.drop(data[data['hadAfkTeammate'] > 0].index, inplace=True)\n",
+    "    df.drop(data[(data['gameEndedInSurrender'] | data['gameEndedInSurrender']) & (data['gameDuration'] < 1350)].index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropOutliers(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def returnParams(df: pd.DataFrame):\n",
+    "    params = {}\n",
+    "    weight = 4\n",
+    "    relevantData = df.describe()\n",
+    "    meanScoreCreeps = relevantData.loc['mean']['scoreCreeps'] / (relevantData.loc['mean']['gameDuration'] / 60)\n",
+    "    meanDmg = relevantData.loc['mean']['totalDamageDealtToChampions'] / (relevantData.loc['mean']['gameDuration'] / 60)\n",
+    "    params['kills'] = 1/weight, 0, relevantData.loc['75%']['kills']\n",
+    "    params['deaths'] = 1/weight, 10, 0\n",
+    "    params['scoreCreeps'] = 1/weight, round(meanScoreCreeps * 0.6, 1), round(meanScoreCreeps * 1.5, 1)\n",
+    "    params['totalDamageDealtToChampions'] = 1/weight, round(meanDmg * 0.6), round(meanDmg * 1.5)\n",
+    "    # tuple(weigth, minPerformorance, maxPerformance)\n",
+    "\n",
+    "    return params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = returnParams(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updateParams(champ, params: dict):\n",
+    "    fi = fileinput.input('test.txt', inplace=True)\n",
+    "    try:\n",
+    "        for line in fi:\n",
+    "            if line.find(champ) != -1:\n",
+    "                line = f'''Vayne;{';'.join(f\"{k},{','.join(map(str, v))}\" for k, v in params.items())}\\n'''\n",
+    "            sys.stdout.write(line)\n",
+    "    except:\n",
+    "        fi.close()\n",
+    "    fi.close()"
    ]
   }
  ],
